--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.12.0",
     "autoprefixer": "^10.4.21",
+    "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "lucide-react": "^0.525.0",
     "mammoth": "^1.9.1",
@@ -27,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "ws": "^8.18.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "tailwindcss": "^3.4.17",
